:sparkles: Add Sessionsコントローラーとview(new)作成

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
         <%= f.password_field :password, placeholder: "パスワード" %>
       </div>
       <div class="col-xs-12">
-        <%= f.password_field :password_confirmation, placeholder: "上記と同じパスワード" %>
+        <%= f.password_field :password_confirmation, placeholder: "パスワード再入力" %>
       </div>
       <div class="col-xs-12">
         <p>[アカウント登録]をクリックすることで、利用規約、データに関するポリシー 、Cookieポリシーに同意するものとします。サービスに関連してCloneAppFBからSMS通知が届くことがありますが、これはいつでもオフに設定できます。</p>
