--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Pictures#index</h1>
 <p>Find me in app/views/pictures/index.html.erb</p>
+<%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
