--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <header>
+      <ul>
+        <li><%= link_to "FB", pictures_path %></li>
+        <li><%= link_to "HOME", pictures_path %></li>
+      </ul>
+      <ul>
+      <% if logged_in? %>
+        <li><%= link_to "マイページ", user_path(current_user.id) %></li>
+        <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
+      <% else %>
+        <li><%= link_to "新規登録", new_user_path %></li>
+        <li><%= link_to "ログイン", new_session_path %></li>
+      <% end %>
+      </ul>
+    </header>
     <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
