--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,3 +1,34 @@
-<h1>Pictures#index</h1>
-<p>Find me in app/views/pictures/index.html.erb</p>
-<%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+<div class="main container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+      </div>
+      <div class="col-xs-12 col-sm-8 col-md-6">
+        <div class="stories">
+          <h3>ストーリーズを作成</h3>
+          <p>写真や動画、メッセージなどをシェアしよう。</p>
+        </div>
+        <div class="post">
+          <%= link_to "◉", user_path(current_user.id) %>
+          <%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %>
+          <ul>
+            <li>ライブ動画</li>
+            <li>写真・動画</li>
+            <li>気分・アクティビティ</li>
+          </ul>
+        </div>
+        <div class="make_room">
+          <%= link_to "ルームを作成しよう", "#" %>
+        </div>
+        <div class="recommend">
+          <p>おすすめの投稿</p>
+          <%= @recommend.user_id %>
+          <%= @recommend.content %>
+          <%= @recommend.image %>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-3">
+      </div>
+    </div>
+  </div>
+</div>
