--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </ul>
       <ul>
       <% if logged_in? %>
-        <li><%= link_to "マイページ", user_path(current_user.id) %></li>
+        <li><%= link_to "マイページ", user_path(current_user.id) %>
         <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
       <% else %>
         <li><%= link_to "新規登録", new_user_path %></li>
