--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-3">
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-6"">
+      <div class="col-xs-12 col-sm-8 col-md-6">
         <div class="my_pictures">
           <h3>投稿</h3>
           <div class="">
