--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,40 +1,15 @@
 <div class="container-fluid">
   <div class="row signup">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-3">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-6">
       <h1>アカウント登録</h1>
-    </div>
-    <% if @user.errors.any? %>
-      <div class="col-xs-12" id="error_explanation">
-        <h3>下記の <%= @user.errors.count %>つのエラーにより、<%= @user.name %> さんを登録できませんでした</h3>
-        <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-    <div class="col-xs-12">
-      <h5>簡単に登録できます</h5>
-    </div>
-    <%= form_with(model: @user, local: true) do |f| %>
-      <div class="col-xs-12" >
-        <%= f.text_field :name, placeholder: "名前" %>
-      </div>
-      <div class="col-xs-12">
-        <%= f.email_field :email, placeholder: "メールアドレス" %>
-      </div>
-      <div class="col-xs-12">
-        <%= f.password_field :password, placeholder: "パスワード" %>
-      </div>
-      <div class="col-xs-12">
-        <%= f.password_field :password_confirmation, placeholder: "パスワード再入力" %>
-      </div>
-      <div class="col-xs-12">
+      <%= render 'form' %>
+      <div class="">
         <p>[アカウント登録]をクリックすることで、利用規約、データに関するポリシー 、Cookieポリシーに同意するものとします。サービスに関連してCloneAppFBからSMS通知が届くことがありますが、これはいつでもオフに設定できます。</p>
       </div>
-      <div class="col-xs-12">
-        <%= f.submit "アカウント登録" %>
-      </div>
-    <% end %>
+    </div>
+    <div class="col-xs-12 col-md-3">
+    </div>
   </div>
 </div>
