:sparkles: Add viewのパネルとユーザーアイコン追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 
   <body>
     <header>
-      <ul>
+      <ul class="list-inline list-unstyled">
         <li><%= link_to "FB", pictures_path %></li>
         <li><%= link_to "HOME", pictures_path %></li>
       </ul>
-      <ul>
+      <ul class="list-inline list-unstyled">
       <% if logged_in? %>
         <li><%= link_to "マイページ", user_path(current_user.id) %>
         <li><%= link_to "ログアウト", session_path(current_user.id), method: :delete %></li>
