--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -10,11 +10,15 @@
     </div>
   <% end %>
 </div>
-<%= link_to "◉", user_path(current_user.id) %>
-<p><%= current_user.name %></p>
+<ul class="list-inline list-unstyled">
+  <li><span class="user_icon glyphicon glyphicon-user"></span></li>
+  <li><p class="picture_username"><%= current_user.name %></li>
+</ul>
 <%= form_with(model: @picture, url: new_or_edit, local: true) do |f| %>
-  <div class="picture_content">
+  <div class="picture_content lead">
     <%= f.text_field :content %>
+  </div>
+  <div class="picture_image">
     <%= image_tag @picture.image.url, height: "300" if @picture.image && @picture.image.url %>
   </div>
   <div class="picture_image">
