--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,2 +1,14 @@
-<h3>投稿を編集</h3>
-<%= render 'form' %>
+<div class="main container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-6">
+      <div class="panel panel-default">
+      <h3>投稿を編集</h3>
+      <%= render 'form' %>
+    </div>
+  </div>
+  <div class="col-xs-12 col-sm-4 col-md-3">
+  </div>
+</div>
+</div>
