--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,32 +1,36 @@
 <div class="container-fluid">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-3">
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-6">
+      <div class="my_pictures panel panel-default">
+        <h3>投稿</h3>
       </div>
-      <div class="col-xs-12 col-sm-8 col-md-6">
-        <div class="my_pictures">
-          <h3>投稿</h3>
-          <div class="">
-            <p><%= @picture.user.name %></p>
-            <p><%= @picture.content %></p>
-            <% if @picture.image.present? %>
-              <%= image_tag @picture.image.url, height: "300" %>
-            <% end %>
-            <ul>
-              <li>いいね！</li>
-              <li>コメントする</li>
-            </ul>
-            <% if current_user.id == @picture.user_id %>
-              <ul>
-                <li><%= link_to "修正", edit_picture_path(@picture.id) %></li>
-                <li><%= link_to "削除", picture_path(@picture.id), method: :delete %></li>
-              </ul>
-            <% end %>
-          </div>
+      <div class="panel panel-default">
+        <ul class="list-inline list-unstyled">
+          <li><span class="user_icon glyphicon glyphicon-user"></span></li>
+          <li><p class="picture_username"><%= @picture.user.name %></p></li>
+        </ul>
+        <p class=picture_timestamp><small><%= @picture.updated_at.strftime("%Y-%m-%d %H:%M") %></small></p>
+        <p class="picture_content lead"><%= @picture.content %></p>
+        <div class="picture_image">
+          <% if @picture.image.present? %>
+            <%= image_tag @picture.image.url, height: 300 %>
+          <% end %>
         </div>
+        <ul class="list-inline list-unstyled">
+          <li><%= link_to "いいね！", "#" %></li>
+          <li><%= link_to "コメントする", "#" %></li>
+        </ul>
+        <% if current_user.id == @picture.user_id %>
+          <ul class="list-inline list-unstyled">
+            <li><%= link_to "修正", edit_picture_path(@picture.id) %></li>
+            <li><%= link_to "削除", picture_path(@picture.id), method: :delete %></li>
+          </ul>
+        <% end %>
       </div>
-      <div class="col-xs-12 col-md-3">
-      </div>
+    </div>
+    <div class="col-xs-12 col-md-3">
     </div>
   </div>
 </div>
