--- a/app/assets/stylesheets/pictures.css
+++ b/app/assets/stylesheets/pictures.css
@@ -1,5 +1,33 @@
+body {
+  background-color: #F0F2F6;
+}
+
+header {
+  background-color: #ffffff;
+  height: 50px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  margin-bottom: 18px;
+  display: flex;
+  justify-content: space-between;
+}
+
+header ul {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+}
+
 h3 {
   margin: 0;
+}
+
+.user_icon {
+  font-size: 25px;
+  margin-top: 10px;
+  margin-right: 5px;
 }
 
 .panel {
@@ -14,12 +42,77 @@ h3 {
   margin-bottom: 10px;
 }
 
-.user_icon {
-  font-size: 25px;
-  margin-top: 10px;
-  margin-right: 5px;
+.picture_content {
+  padding-top: 10px;
+  font-size: 18px;
+  margin-bottom: 20px;
+  outline: none;
+  resize: none;
+  border: transparent;
+  box-shadow: 0px 0px 0px 0px;
+}
+
+::placeholder {
+  font-size: 18px;
+}
+
+.image_upload {
+  height: 80px;
+  position: relative;
+}
+.image_upload ul {
+  z-index: 1;
+}
+
+.image_upload ul .left {
+  float: left;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  bottom: 0;
+  left: 10px;
+}
+
+.image_upload ul .right {
+  float: right;
+  padding-top: 3px;
+  z-index: 2;
+}
+
+.filelabel {
+  border-radius: 3em;
+  padding: 9px 12px;
+  display: block;
+}
+
+.filelabel img {
+   vertical-align: middle;
+}
+
+.filelabel:hover {
+  cursor: pointer;
+  background-color: #E6E6E6;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.not_selected {
+  padding-top: 15px;
 }
 
 #recommend {
   font-size: 16px;
+}
+
+.send {
+  background-color: #E6E6E6;
+  border: transparent;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+input[type="submit"] {
+    display: none;
 }
