--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,11 @@
     <div class="col-xs-12 col-md-3">
     </div>
     <div class="col-xs-12 col-sm-8 col-md-6">
-      <h1>アカウント情報修正</h1>
-      <%= render 'form' %>
-      <%= link_to "戻る", user_path(@user.id) %>
+      <div class="panel panel-default">
+        <h1>アカウント情報修正</h1>
+        <%= render 'form' %>
+        <%= link_to "戻る", user_path(@user.id) %>
+      </div>
     </div>
     <div class="col-xs-12 col-md-3">
     </div>
