--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,11 +3,13 @@
     <div class="col-xs-12 col-md-3">
     </div>
     <div class="col-xs-12 col-sm-8 col-md-6">
-      <h1>アカウント登録</h1>
-      <%= render 'form' %>
-      <div class="">
-        <p>[アカウント登録]をクリックすることで、利用規約、データに関するポリシー 、Cookieポリシーに同意するものとします。サービスに関連してCloneAppFBからSMS通知が届くことがありますが、これはいつでもオフに設定できます。</p>
-      </div>
+      <div class="panel panel-default">
+        <h1>アカウント登録</h1>
+        <%= render 'form' %>
+        <div class="">
+          <p>[アカウント登録]をクリックすることで、利用規約、データに関するポリシー 、Cookieポリシーに同意するものとします。サービスに関連してCloneAppFBからSMS通知が届くことがありますが、これはいつでもオフに設定できます。</p>
+        </div>
+      </div>  
     </div>
     <div class="col-xs-12 col-md-3">
     </div>
