--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,13 +53,14 @@
           <% @pictures.each do |picture| %>
             <div class="panel panel-default">
               <%= link_to "詳細", picture_path(picture.id) %>
-              <ul class="list-inline list-unstyled">
+              <ul class="list-inline list-unstyled" >
                 <li><span class="user_icon glyphicon glyphicon-user"></span></li>
                 <li><p class="picture_username"><%= picture.user.name %></li>
               </ul>
+              <p class="picture_timestamp"><small><%=  picture.updated_at.strftime("%Y-%m-%d %H:%M") %></small></p>
               <p class="picture_content lead"><%= picture.content %></p>
               <% if picture.image.present? %>
-                <%= image_tag picture.image.url, height: "300" %>
+                <%= image_tag picture.image.url, class: "img-responsive" %>
               <% end %>
               <ul class="list-inline list-unstyled">
                 <li><%= link_to "いいね！", "#" %></li>
