--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,8 +28,9 @@
           </div>
           <div class="post panel panel-default">
             <ul class="list-inline list-unstyled">
-              <li><span class="user_icon glyphicon glyphicon-user"></span></li>
-              <li><%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %></li>
+              <li>
+              <span class="user_icon glyphicon glyphicon-user"></span></li>
+              <li><div class="lead"><%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %></div></li>
             </ul>
             <ul  class="list-inline list-unstyled">
               <li>ライブ動画</li>
