--- a/app/assets/stylesheets/pictures.css
+++ b/app/assets/stylesheets/pictures.css
@@ -3,7 +3,7 @@ body {
 }
 
 header {
-  background-color: #ffffff;
+  background-color: #1A76F2;
   height: 50px;
   padding-top: 10px;
   padding-right: 20px;
@@ -18,6 +18,10 @@ header ul {
   display: flex;
   align-items: center;
   margin-bottom: 0;
+}
+
+header a {
+  color: #ffffff;
 }
 
 h3 {
