--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -9,7 +9,10 @@
       </div>
       <div class="post panel panel-default">
         <span class="user_icon glyphicon glyphicon-user"></span>
-        <%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %>
+        <div class="lead">
+          <%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %>
+        </div>
+
         <ul class="list-inline list-unstyled">
           <li>ライブ動画</li>
           <li>写真・動画</li>
@@ -17,7 +20,7 @@
         </ul>
       </div>
       <div class="make_room panel panel-default">
-        <%= link_to "ルームを作成しよう", "#" %>
+        <p>ルームを作成しよう</p>
       </div>
       <% @recommend_picture.each do |recommend| %>
         <div class="recommend panel panel-default">
