--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -8,7 +8,7 @@
         <p>写真や動画、メッセージなどをシェアしよう。</p>
       </div>
       <div class="post panel panel-default">
-        <span class="user_icon glyphicon glyphicon-user"></span>
+        <span class="user_icon glyphicon glyphicon-user" aria-hidden="true"></span>
         <div class="lead">
           <%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %>
         </div>
