--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
           <div class="post panel panel-default">
             <ul class="list-inline list-unstyled">
               <li>
-              <span class="user_icon glyphicon glyphicon-user"></span></li>
+              <span class="user_icon glyphicon glyphicon-user" aria-hidden="true"></span></li>
               <li><div class="lead"><%= link_to "#{current_user.name}さん、その気持ち、シェアしよう", new_picture_path %></div></li>
             </ul>
             <ul  class="list-inline list-unstyled">
