--- a/app/views/pictures/confirm.html.erb
+++ b/app/views/pictures/confirm.html.erb
@@ -8,7 +8,7 @@
         <%= form_with(model: @picture, url: pictures_path, local: true) do |f| %>
           <%= @picture.content %>
           <%= f.hidden_field :content %>
-          <%= image_tag @picture.image.url, class: "img-responsive" if @picture.image && @picture.image.url %>
+          <%= image_tag(@picture.image.url, class: "img-responsive") if @picture.image && @picture.image.url %>
           <%= f.hidden_field :image_cache %>
           <label class="send btn btn-default btn-block"><div>
             <%= f.submit "投稿", class: "send" %>投稿
